<aside> alignmet correction

--- a/files/style.css
+++ b/files/style.css
@@ -64,7 +64,7 @@ body {
    opacity: 50%; 
    align-self: flex-start;
    width:100%; 
-   font-size: 0.5rem;
+   font-size: 1rem;
    
  }
 
